Fixed weird alignment issues on mobile for header

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -16,8 +16,11 @@
   font-weight: 300;
   letter-spacing: -1px;
   margin-bottom: 0;
-  margin-left: -15em;
   float: left;
+
+  @media only screen and (min-width: 1920px) {
+    margin-left: -12em;
+  }
 
   @include media-query($on-palm) {
     padding-right: 45px;
@@ -33,7 +36,19 @@
   float: left;
   font-weight: 300;
   margin-top: 0.2em;
-  margin-left: -12em;
+
+  @media only screen and (min-width: 1080px) {
+    margin-left: -12em;
+  }
+
+  @media only screen and (max-width: 430px) {
+    margin-top: -1em;
+  }
+
+  @media only screen and (min-width: 810px) {
+    margin-left: 1em;
+  }
+
 }
 
 .site-nav {
@@ -44,7 +59,10 @@
   border: 1px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
-  margin-right: -15em;
+
+  @media only screen and (min-width: 1920px) {
+    margin-right: -15em;
+  }
 
   .nav-trigger {
     display: none;
